Comment now can have attachments